--- a/think-content/styles/globals.css
+++ b/think-content/styles/globals.css
@@ -2,6 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer component{
+  .sidebar-icon {
+    @apply relative flex items-center justify-center 
+        h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
+        bg-blue-600 text-white
+        hover:bg-blue-800 hover:text-white
+        rounded-3xl hover:rounded-xl
+        transition-all duration-300 ease-linear
+        cursor-pointer;
+  }
+  .sidebar-tooltip {
+    @apply absolute w-auto p-4 m-8 min-w-max left-20
+    rounded-md shadow-md
+    text-gray-400 bg-gray-50 font-bold
+    transition-all duration-100 scale-0 origin-left;
+  }
+
+  .profile-icon{
+    @apply relative flex items-center justify-center 
+        h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
+        bg-gray-300 text-white
+        hover:bg-gray-400 hover:text-white
+        transition-all duration-300 ease-linear
+        cursor-pointer;
+  }
+}
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
